# alpha

./: .gitignore  README.md  flake.nix
tools/simplytrain/: default.nix  launch.bash  pyproject.toml  requirements.txt  setloader.py  setloader.pyi  wsgi.py  wsgi.pyi
tools/simplytrain/content/: BS2_150-151.csv  BS2_152-153.csv  BS2_156-157.csv  BS2_162.csv  BS3_009.csv  BS3_010-011.csv  BS3_012-013.csv  BS3_014-015.csv  BS3_021.csv  BS3_022-023.csv  BS3_024.csv  BS3_025.csv  BS3_026-027.csv  BS3_026-027_teacher.csv  BS3_040_041.csv  BS3_044_047.csv  BS3_056.csv  BS_106.csv  BS_108-120.csv  BS_140-141.csv  BS_147.csv  BS_96-98.csv  Other.csv  README.md
tools/simplytrain/content/221130_3AHEL_SA1/: BS_102-105.csv  BS_120-125.csv
tools/simplytrain/content/221130_SA1_3AHEL/: BS_126-129.csv
tools/simplytrain/content/230125_VOC_TEST_1_3AHEL/: BS_130-131.csv  BS_136-137.csv  BS_142-143.csv
tools/simplytrain/content/230503_3AHEL_SA2/: BS2_156-157.csv
tools/simplytrain/content/230503_SA2_3AHEL/: BS2_152-153.csv  BS2_155.csv
tools/simplytrain/content/2306xx_3AHEL_VOC_TEST_2/: BS3_012-013.csv  BS3_014-015.csv  BS3_021.csv  BS3_022-023.csv  BS3_024.csv  BS3_026-027.csv  BS3_026-027_teacher.csv
tools/simplytrain/content/2306xx_VOC_TEST_2_3AHEL/: BS3_009.csv  BS3_017.csv  BS3_018-020.csv
tools/simplytrain/content/231213_4AHEL_SA1/: BS3_042_043.csv  BS3_044_047.csv  BS3_048_049.csv
tools/simplytrain/content/231213_4AHEL_SA2/: BS3_029-031.csv  BS3_032_033.csv  BS3_040_041.csv  GGP_extras.csv
tools/simplytrain/templates/: base.html  index.html  vocabulary.html
(+161 files in other folders)
